--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.github.kenglxn.qrgen:android:2.6.0'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 
 
 }
